# RUCKUS-Dashboard

./: .gitignore  README.md
.github/workflows/: ci.yml
RUCKUS/: pyproject.toml  ruckus_dashboard.py
RUCKUS/ruckus_dashboard/: __init__.py  app.py  certs.py  cli.py  config.py  dump.py  logging_setup.py
RUCKUS/ruckus_dashboard/auth/: audit.py  csrf.py  oidc.py  profiles.py  ratelimit.py  rbac.py  secrets.py  session_store.py  users.py
RUCKUS/ruckus_dashboard/clients/: __init__.py  base.py  capabilities.py  ruckus_one.py  smartzone.py  switchm.py
RUCKUS/ruckus_dashboard/db/: __init__.py  migrate.py  models.py
RUCKUS/ruckus_dashboard/infra/: cache.py  capability_gate.py  capability_registry.py  envelope.py  inflight.py  parallel_fetch.py  warmup.py
RUCKUS/ruckus_dashboard/modules/: __init__.py  _base.py  _registry.py  _stub.py  alarms.py  api_explorer.py  aps.py  clients.py  controller.py  firmware.py  overview.py  poe.py  ports.py  rogues.py  security.py  stack.py  switch_groups.py  switches.py  topology.py  traffic.py  vlans.py  wlans.py  zones.py
RUCKUS/ruckus_dashboard/net/: allowlist.py  port_scan.py
RUCKUS/ruckus_dashboard/notify/: __init__.py  channels.py  config.py  mailer.py  outage.py  rules.py  scheduler.py  state_store.py
RUCKUS/ruckus_dashboard/reports/: collect.py  excel.py  model.py
RUCKUS/ruckus_dashboard/routes/: auth.py  connect.py  modules.py  notifications.py  pages.py  profiles.py  topology_layout.py  warmup.py
RUCKUS/ruckus_dashboard/security/: __init__.py  validator.py
RUCKUS/ruckus_dashboard/static/: dashboard.js  login.js  motion.js  notifications.js  styles.css  topology.js
RUCKUS/ruckus_dashboard/static/fonts/: README.md
RUCKUS/ruckus_dashboard/templates/: admin_users.html  auth_login.html  base.html  legacy.html  login.html  module.html  notifications.html  overview.html  profiles.html  topology.html
RUCKUS/ruckus_dashboard/templates/partials/: entity_link.html  error_banner.html  filter_chip.html  freshness_strip.html  health_bar.html  kpi_card.html  status_pill.html  table_pagination.html  tile_skeleton.html  warmup_strip.html
docs/: DEPLOY.md
docs/superpowers/plans/: 2026-06-05-ruckus-dashboard-foundation.md  2026-06-06-ruckus-dashboard-plan2a-warmup.md  2026-06-06-ruckus-dashboard-plan2b-wireless.md  2026-06-06-ruckus-dashboard-plan2d-crosscutting-bootstrap.md  2026-06-09-topology-map.md  (+10 more)
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: extract_logo.py  install.ps1  install.sh  start.ps1  start.sh
tests/: conftest.py
tests/integration/: test_app_factory.py  test_auth_gate_defaults.py  test_auth_login.py  test_auth_oidc.py  test_backward_compat.py  test_cli.py  test_connect.py  test_dashboard_js.py  test_dump_cli.py  test_dump_creds.py  test_modern_ui.py  test_motion_ui.py  test_notifications_api.py  test_notifications_tenant_isolation.py  test_pages.py  test_profiles_ui.py  test_routes_new_ui.py  test_serve.py  test_static_assets.py  test_topology_js.py  test_topology_layout_api.py  test_topology_node.py  test_warmup_routes.py
tests/smoke/: test_launch.py
tests/unit/: test_certs.py  test_config.py  test_dump.py  test_install.py  test_logging_setup.py  test_package.py
(+93 files in other folders)
