[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ruckus_dashboard"
version = "2.0.0.dev0"
description = "RUCKUS DSO Assurance Dashboard"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0",
  "requests>=2.31",
  "urllib3>=2.0",
  "cryptography>=42",
  "python-dotenv>=1.0",
  "openpyxl>=3.1",
]

[project.scripts]
ruckus-dashboard = "ruckus_dashboard.cli:main"

[project.optional-dependencies]
test = ["pytest>=7", "responses>=0.24", "pytest-cov>=4"]
# Opt-in production WSGI server for the reverse-proxy path (nginx terminates
# TLS; waitress serves plain HTTP). The default standalone path uses Werkzeug
# with a self-signed cert and needs no extra deps.
server = ["waitress>=3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ruckus_dashboard*"]
