[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ruckus_dashboard"
version = "2.0.0.dev0"
description = "RUCKUS DSO Assurance Dashboard"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0",
  "requests>=2.31",
  "urllib3>=2.0",
  "cryptography>=42",
  "python-dotenv>=1.0",
  "openpyxl>=3.1",
  # Phase B (identity / RBAC / multi-tenancy), single-node SQLite. SQLAlchemy
  # 2.x ORM; PB1 creates schema via Base.metadata.create_all (Alembic/Authlib
  # land in later slices). Passwords are argon2id via passlib.
  "sqlalchemy>=2",
  "passlib[argon2]>=1.7",
]

[project.scripts]
ruckus-dashboard = "ruckus_dashboard.cli:main"

[project.optional-dependencies]
test = ["pytest>=7", "responses>=0.24", "pytest-cov>=4"]
# Opt-in production WSGI server for the reverse-proxy path (nginx terminates
# TLS; waitress serves plain HTTP). The default standalone path uses Werkzeug
# with a self-signed cert and needs no extra deps.
server = ["waitress>=3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ruckus_dashboard*"]
