[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ruckus_dashboard"
version = "2.0.0.dev0"
description = "RUCKUS DSO Assurance Dashboard"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0",
  "requests>=2.31",
  "urllib3>=2.0",
  "cryptography>=42",
  "python-dotenv>=1.0",
  "openpyxl>=3.1",
  # Phase B (identity / RBAC / multi-tenancy), single-node SQLite. SQLAlchemy
  # 2.x ORM; PB1 creates schema via Base.metadata.create_all (Alembic lands in
  # a later slice). Passwords are argon2id via passlib. Authlib (PB2) drives the
  # OIDC SSO flow against an on-prem/air-gapped IdP; all pure-Python wheels,
  # installable from a local wheelhouse.
  "sqlalchemy>=2",
  "passlib[argon2]>=1.7",
  "authlib>=1.3",
]

[project.scripts]
ruckus-dashboard = "ruckus_dashboard.cli:main"

[project.optional-dependencies]
test = ["pytest>=7", "responses>=0.24", "pytest-cov>=4"]
# Opt-in production WSGI server for the reverse-proxy path (nginx terminates
# TLS; waitress serves plain HTTP). The default standalone path uses Werkzeug
# with a self-signed cert and needs no extra deps.
server = ["waitress>=3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ruckus_dashboard*"]
